--- a/src/app/system/records-page/add-category/add-category.component.html
+++ b/src/app/system/records-page/add-category/add-category.component.html
@@ -42,7 +42,7 @@
               *ngIf="capacity.invalid && capacity.touched"
         >Поле должно быть заполненно</span>
       </div>
-      <button type="submit" class="btn btn-primary">Добавить</button>
+      <button type="submit" class="btn btn-primary" [disabled]="f.invalid">Добавить</button>
     </form>
   </div>
 </div>
