--- a/src/app/system/records-page/edit-category/edit-category.component.html
+++ b/src/app/system/records-page/edit-category/edit-category.component.html
@@ -1,40 +1,66 @@
 <div class="card">
   <div class="card-header bordered">
     <div class="header-block">
-      <h3 class="title">Добавить событие</h3>
+      <h3 class="title">Редактировать категорию</h3>
     </div>
   </div>
   <div class="card-block">
-    <form>
+    <div class="alert alert-{{ message.type}}"
+         *ngIf="message.text"
+    >{{ message.text }}</div>
+    <form #f="ngForm" (ngSubmit)="onSubmit(f)">
       <div class="form-group">
-        <label class="control-label" for="category">Выберите категорию</label>
-        <select class="form-control" id="category">
-          <option>Option one</option>
-          <option>Option two</option>
-          <option>Option three</option>
-          <option>Option four</option>
+        <label class="control-label" for="e-select-category">Выберите категорию</label>
+        <select
+                id="e-select-category"
+                class="form-control"
+                [(ngModel)]="currentCategoryId"
+                (change)="onCategoryChange()"
+                [ngModelOptions]="{standalone: true}"
+        >
+          <option
+                  *ngFor="let c of categories"
+                  [value]="c.id"
+          >{{ c.name }}</option>
         </select>
       </div>
-      <div class="form-group">
-        <label class="control-label">Выберите тип</label>
-        <div>
-          <label>
-            <input class="radio" name="radios" type="radio">
-            <span>Доход</span>
-          </label>
-        </div>
-        <div>
-          <label>
-            <input class="radio" name="radios" type="radio" checked>
-            <span>Расход</span>
-          </label>
-        </div>
+      <div class="form-group"
+           [ngClass]="{'has-error': name.invalid && name.touched}"
+      >
+        <label class="control-label" for="e-category-name">Введите название</label>
+        <input type="text"
+               id="e-category-name"
+               class="form-control"
+               name="name"
+               #name="ngModel"
+               [ngModel]="currentCategory.name"
+               required
+        >
+        <span class="form-help-text"
+              *ngIf="name.invalid && name.touched"
+        >Поле не может быть пустым
+        </span>
       </div>
-      <div class="form-group">
-        <label class="control-label" for="amount">Введите сумму</label>
-        <input type="number" value="0" id="amount" class="form-control">
+      <div class="form-group"
+           [ngClass]="{'has-error': capacity.invalid && capacity.touched}"
+      >
+        <label class="control-label" for="e-category-value">Введите лимит</label>
+        <input
+                type="number"
+                value="0"
+                id="e-category-value"
+                class="form-control"
+                #capacity="ngModel"
+                name="capacity"
+                [ngModel]="currentCategory.capacity"
+                required
+                min="1"
+        >
+        <span class="form-help-text"
+              *ngIf="capacity.invalid && capacity.touched"
+        >Поле должно быть заполненно</span>
       </div>
-      <button type="submit" class="btn btn-primary">Добавить</button>
+      <button type="submit" class="btn btn-primary" [disabled]="f.invalid">Редактировать</button>
     </form>
   </div>
 </div>
