--- a/src/app/system/records-page/add-event/add-event.component.html
+++ b/src/app/system/records-page/add-event/add-event.component.html
@@ -5,36 +5,76 @@
     </div>
   </div>
   <div class="card-block">
-    <form>
+    <form #f="ngForm"  (ngSubmit)="onSubmit(f)">
       <div class="form-group">
         <label class="control-label" for="category">Выберите категорию</label>
-        <select class="form-control" id="category">
-          <option>Option one</option>
-          <option>Option two</option>
-          <option>Option three</option>
-          <option>Option four</option>
+        <select
+                class="form-control"
+                id="category"
+                [ngModel]="1"
+                name="category"
+                required
+
+        >
+          <option
+                  *ngFor="let c of categories"
+                  [value]="c.id"
+          >
+            {{ c.name }}
+          </option>
         </select>
       </div>
-      <div class="form-group">
+      <div class="form-group"  >
         <label class="control-label">Выберите тип</label>
-        <div>
+        <div *ngFor="let t of types">
           <label>
-            <input class="radio" name="radios" type="radio">
-            <span>Доход</span>
-          </label>
-        </div>
-        <div>
-          <label>
-            <input class="radio" name="radios" type="radio" checked>
-            <span>Расход</span>
+            <input class="radio"
+                   name="type"
+                   type="radio"
+                   [ngModel]="'outcome'"
+                   [value]="t.type"
+            >
+            <span>{{ t.label }}</span>
           </label>
         </div>
       </div>
-      <div class="form-group">
-        <label class="control-label" for="amount">Введите сумму</label>
-        <input type="number" value="0" id="amount" class="form-control">
+      <div class="form-group"
+                 [ngClass]="{'has-error': amount.invalid && amount.touched}"
+    >
+      <label class="control-label" for="amount">Введите сумму</label>
+      <input type="number"
+             id="amount"
+             name="amount"
+             #amount="ngModel"
+             [ngModel]="1"
+             required
+             min="1"
+             class="form-control"
+      >
+      <span class="form-help-text" *ngIf="amount.invalid && amount.touched">
+          Поле не должо быть пустым
+        </span>
+    </div>
+      <div class="form-group"
+           [ngClass]="{'has-error': description.invalid && description.touched}"
+      >
+        <label class="control-label" for="description">Введите описание</label>
+        <input type="text"
+               id="description"
+               name="description"
+               #description="ngModel"
+               ngModel
+               required
+               class="form-control"
+        >
+        <span class="form-help-text" *ngIf="description.invalid && description.touched">
+          Поле не должо быть пустым
+        </span>
       </div>
-      <button type="submit" class="btn btn-primary">Добавить</button>
+      <button type="submit"
+              class="btn btn-primary"
+              [disabled]="f.invalid"
+      >Добавить</button>
     </form>
   </div>
 </div>
