--- a/src/app/system/history-page/history-page.component.html
+++ b/src/app/system/history-page/history-page.component.html
@@ -1,7 +1,12 @@
 <div class="title-block">
-  <h3 class="title">
+  <h3 class="title pull-left">
     Страница истории <span class="sparkline bar"></span>
   </h3>
+  <div class="pull-right">
+    <button class="btn-sm btn btn-primary-outline" (click)="openFilter()">
+      <i class="fa fa-filter"></i>
+    </button>
+  </div>
 </div>
 
 <div *ngIf="!isLoaded">
@@ -13,7 +18,12 @@
           [categories]="categories"
           [events]="events"
   ></wfm-history-events>
-  <wfm-history-filter></wfm-history-filter>
+  <div *ngIf="isFilterVisible">
+    <wfm-history-filter
+            (onFilterApply)="onFilterApply()"
+            (onFilterCancel)="onFilterCancel()"
+    ></wfm-history-filter>
+  </div>
 </div>
 
 
